MainPAge ScrollBar fix test

--- a/src/Components/MainPage/MainPage.css
+++ b/src/Components/MainPage/MainPage.css
@@ -1,3 +1,8 @@
+::-webkit-scrollbar {
+    min-width: 0px;
+    width: 0px;  
+    display: none;
+}
 
 body {
     background: var(--tg-theme-secondary-bg-color);
