--- a/src/Components/MainPage/StoryBar/Story/Story.css
+++ b/src/Components/MainPage/StoryBar/Story/Story.css
@@ -1,6 +1,4 @@
-::-webkit-scrollbar { /* chrome based */
-    width: 0px;  /* ширина scrollbar'a */
-}
+
 
 .Story{
     display: flex;
